--- a/app/markers/templates/map.html
+++ b/app/markers/templates/map.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Markers Map</title>
+    <title>Sun Coral Report Map</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="{% static 'map.css' %}" />
